[gd_scene load_steps=12 format=3 uid="uid://duuw63qewx14g"]

[ext_resource type="PackedScene" uid="uid://2hnhl78pssta" path="res://scenes/player_char.tscn" id="1_1tund"]
[ext_resource type="Script" path="res://scripts/stage.gd" id="1_pd7f1"]
[ext_resource type="Shader" path="res://scripts/stage.gdshader" id="2_1p3lp"]
[ext_resource type="Texture2D" uid="uid://c5at21penfhp8" path="res://wall.png" id="2_x8yd4"]
[ext_resource type="PackedScene" uid="uid://dg7hxtwusxed2" path="res://scenes/shade_generator.tscn" id="3_58hdn"]
[ext_resource type="Texture2D" uid="uid://c2dvcavuaqbrc" path="res://floor.png" id="4_yt0v7"]
[ext_resource type="PackedScene" uid="uid://fv5sjpx282kj" path="res://scenes/insp_object.tscn" id="5_4sf2p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_75bat"]
shader = ExtResource("2_1p3lp")
shader_parameter/brightness = 0.0
shader_parameter/saturation = 0.5

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wreye"]
texture = ExtResource("2_x8yd4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3rrjf"]
texture = ExtResource("4_yt0v7")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_hbhhy"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 31
physics_layer_0/collision_mask = 31
sources/0 = SubResource("TileSetAtlasSource_wreye")
sources/1 = SubResource("TileSetAtlasSource_3rrjf")

[node name="Stage" type="Node"]
script = ExtResource("1_pd7f1")

[node name="TileMap" type="TileMap" parent="." groups=["obstacles"]]
material = SubResource("ShaderMaterial_75bat")
tile_set = SubResource("TileSet_hbhhy")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 196613, 0, 0, 196612, 0, 0, 196611, 0, 0, 196610, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 524305, 0, 0, 458769, 0, 0, 393233, 0, 0, 327696, 0, 0, 262160, 0, 0, 196624, 0, 0, 131088, 0, 0, 65553, 0, 0, 17, 0, 0, -65530, 0, 0, -65531, 0, 0, -65532, 0, 0, -65533, 0, 0, -65534, 0, 0, -65535, 0, 0, -65536, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 262159, 0, 0, 262158, 0, 0, 262157, 0, 0, 262156, 0, 0, 524289, 1, 0, 458753, 1, 0, 393217, 1, 0, 327681, 1, 0, 262145, 1, 0, 196609, 1, 0, 131073, 1, 0, 65537, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 131076, 1, 0, 131075, 1, 0, 131074, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 262149, 1, 0, 262148, 1, 0, 262147, 1, 0, 262146, 1, 0, 327682, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 458757, 1, 0, 393221, 1, 0, 327685, 1, 0, 327684, 1, 0, 327683, 1, 0, 393219, 1, 0, 458755, 1, 0, 458756, 1, 0, 393220, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 524304, 1, 0, 524303, 1, 0, 524302, 1, 0, 524301, 1, 0, 524300, 1, 0, 524299, 1, 0, 524298, 1, 0, 524297, 1, 0, 524296, 1, 0, 524295, 1, 0, 524294, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 327695, 1, 0, 327694, 1, 0, 327693, 1, 0, 327692, 1, 0, 327691, 1, 0, 327690, 1, 0, 327689, 1, 0, 327688, 1, 0, 327687, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 131087, 1, 0, 131086, 1, 0, 131085, 1, 0, 131084, 1, 0, 131083, 1, 0, 131082, 1, 0, 131081, 1, 0, 131080, 1, 0, 131079, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 16, 1, 0, 15, 1, 0, 14, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0)

[node name="InspContainer" type="Node" parent="."]

[node name="InspObject" parent="InspContainer" instance=ExtResource("5_4sf2p")]
position = Vector2(362, 35)

[node name="InspObject2" parent="InspContainer" instance=ExtResource("5_4sf2p")]
position = Vector2(364, 286)
element = 2

[node name="InspObject3" parent="InspContainer" instance=ExtResource("5_4sf2p")]
position = Vector2(1060, 409)
element = 3

[node name="EnemyContainer" type="Node" parent="."]

[node name="ShadeGenerator" parent="EnemyContainer" instance=ExtResource("3_58hdn")]
position = Vector2(1021, 55)

[node name="PlayerBulletContainer" type="Node" parent="."]

[node name="PlayerChar" parent="." instance=ExtResource("1_1tund")]
position = Vector2(265, 379)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[connection signal="stage_clear" from="." to="." method="_on_stage_clear"]
